# ChangeLog for dev-ruby/bundler
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.58 2013/10/16 06:07:34 graaff Exp $

*bundler-1.3.5-r1 (16 Oct 2013)

  16 Oct 2013; Hans de Graaff <graaff@gentoo.org> +bundler-1.3.5-r1.ebuild:
  Add ruby20, fixing bug 476230.

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> bundler-1.3.5.ebuild:
  Stable for x86, wrt bug #484444

  15 Sep 2013; Agostino Sarubbo <ago@gentoo.org> bundler-1.3.5.ebuild:
  Stable for amd64, wrt bug #484444

  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> bundler-1.2.5.ebuild:
  Bundler 1.2.x does not work with rubygems 2.x, bug 483638.

  10 Sep 2013; Hans de Graaff <graaff@gentoo.org> -bundler-1.0.22.ebuild,
  -bundler-1.1.5.ebuild:
  Cleanup.

  28 May 2013; Jeroen Roovers <jer@gentoo.org> bundler-1.3.5.ebuild:
  Marked ~hppa (bug #471306).

  30 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bundler-1.2.5.ebuild:
  Stable for x86, wrt bug #467832

  30 Apr 2013; Agostino Sarubbo <ago@gentoo.org> bundler-1.2.5.ebuild:
  Stable for amd64, wrt bug #467832

*bundler-1.3.5 (29 Apr 2013)

  29 Apr 2013; Hans de Graaff <graaff@gentoo.org> +bundler-1.3.5.ebuild:
  Version bump.

  29 Apr 2013; Hans de Graaff <graaff@gentoo.org> -bundler-1.2.3.ebuild,
  -bundler-1.2.4.ebuild:
  Cleanup.

*bundler-1.2.5 (03 Mar 2013)

  03 Mar 2013; Hans de Graaff <graaff@gentoo.org> +bundler-1.2.5.ebuild:
  Version bump.

*bundler-1.2.4 (24 Feb 2013)

  24 Feb 2013; Hans de Graaff <graaff@gentoo.org> +bundler-1.2.4.ebuild:
  Version bump.

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org> bundler-1.0.22.ebuild,
  bundler-1.1.5.ebuild, bundler-1.2.3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  23 Dec 2012; Hans de Graaff <graaff@gentoo.org> -bundler-1.0.18.ebuild:
  Cleanup.

*bundler-1.2.3 (15 Dec 2012)

  15 Dec 2012; Hans de Graaff <graaff@gentoo.org> +bundler-1.2.3.ebuild:
  Version bump.
