@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 ruby_targets_ruby20 )
 SLOT=0
 SRC_URI=mirror://rubygems/bundler-1.3.5.gem
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	4021487250c740e3dc16b181228db818	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=39dc43cf13571a29780293b9624b2cb6
+_md5_=fa1907461798c439d5921ebbb22262e8
