@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/bundler
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.58 2013/10/16 06:07:34 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bundler/ChangeLog,v 1.59 2013/11/23 16:13:33 graaff Exp $
+
+  23 Nov 2013; Hans de Graaff <graaff@gentoo.org> bundler-1.3.5-r1.ebuild:
+  Fix building with LANG=C by using the ruby gemspec, fixing bug 491826.
 
 *bundler-1.3.5-r1 (16 Oct 2013)
 
